--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   client:
     build:
@@ -9,7 +7,7 @@ services:
       - "5173:5173"
     environment:
       - NODE_ENV=development
-      - VITE_API_URL=http://server:5000
+      - VITE_API_BASE=http://localhost:3001
     depends_on:
       - server
     volumes:
@@ -23,10 +21,10 @@ services:
       context: ./server
       dockerfile: Dockerfile.dev
     ports:
-      - "5000:5000"
+      - "3001:3001"
     environment:
       - NODE_ENV=development
-      - PORT=5000
+      - PORT=3001
       - WATCHPACK_POLLING=true
     volumes:
       - ./server:/app
