--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,13 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@tailwindcss/vite": "^4.1.12",
     "@tensorflow/tfjs": "^4.11.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "axios": "^1.11.0",
+    "dexie": "^4.0.4",
+    "dexie-react-hooks": "^1.1.7",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "flowbite-react": "^0.12.7",
