--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-env": "^7.28.5",
     "axios-retry": "^4.5.0",
     "bottleneck": "^2.19.5",
+    "canvas": "^3.2.0",
     "node-fetch": "^3.3.2"
   }
 }
