--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,5 +1,2 @@
-[[redirects]]
-  from = "/api/*"
-  to = "https://zealous-alexis-proxxied-fbcc588d.koyeb.app/api/:splat"
-  status = 200
-  force = true
+# Removed Netlify proxy - now using direct connection via api.proxxied.com
+# This significantly reduces bandwidth costs by avoiding double proxying
