--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\""
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.28.5",
     "concurrently": "^8.2.2",
+    "jest": "^30.2.0",
     "prettier": "^3.6.2"
   },
   "keywords": [],
@@ -16,6 +18,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@babel/preset-env": "^7.28.5",
     "axios-retry": "^4.5.0",
     "bottleneck": "^2.19.5",
     "node-fetch": "^3.3.2"
