--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "test": "vitest run --silent",
+    "test:ui": "vitest --ui --coverage.enabled=true",
+    "dev": "nodemon --exec tsx src/index.ts",
+    "build": "tsc -p tsconfig.build.json",
+    "start": "node dist/index.js",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "axios": "^1.11.0",
     "axios-retry": "^4.5.0",
@@ -24,10 +26,16 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/multer": "^1.4.12",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "@types/express": "^5.0.5",
+    "@types/multer": "^2.0.0",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/parser": "^8.47.0",
+    "@vitest/coverage-v8": "^4.0.9",
+    "eslint": "^9.39.1",
+    "nodemon": "^3.1.11",
+    "supertest": "^7.0.0",
+    "tsx": "^4.20.6",
+    "typescript-eslint": "^8.47.0",
+    "vitest": "^4.0.9"
   }
 }
