End to end testing via playwright
Also includes some bug fixes found while testing.

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ server/src/uploaded-images/*
 server/coverage/*
 client/coverage/*
 coverage/*
-
+client/playwright-report/
+client/test-results/
 node_modules
