--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint .",
     "test": "vitest run --silent",
     "test:ui": "vitest --ui --coverage.enabled=true",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@hello-pangea/dnd": "^18.0.1",
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/react": "^16.3.0",
     "@types/file-saver": "^2.0.7",
