--- a/server/dockerfile
+++ b/server/dockerfile
@@ -29,4 +29,4 @@ RUN npm ci --omit=dev
 
 # Koyeb will set PORT; make sure your code uses process.env.PORT
 EXPOSE 3001
-CMD ["node", "dist/index.js"]
+CMD ["node", "dist/server/src/index.js"]
