--- a/server/dockerfile
+++ b/server/dockerfile
@@ -15,7 +15,7 @@ COPY --from=deps /app/node_modules ./node_modules
 COPY server/ ./
 # Copy shared types (referenced by server code)
 COPY shared/ ../shared/
-RUN ls -la ../shared/ && npm run build && ls -la dist/
+RUN npm run build
 
 # --- Runtime image
 FROM node:20-alpine AS runtime
@@ -29,4 +29,5 @@ RUN npm ci --omit=dev
 
 # Koyeb will set PORT; make sure your code uses process.env.PORT
 EXPOSE 3001
-CMD ["node", "dist/server/src/index.js"]
+CMD ["node", "dist/index.js"]
+
