--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "pdf-lib": "^1.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "swiper": "^12.0.3",
     "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "^4.0.9",
     "zod": "^4.1.12",
