--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ coverage/*
 client/playwright-report/
 client/test-results/
 client/tests/e2e/pdf-export.spec.ts-snapshots/
+server/src/*.db*
 node_modules
