--- a/server/dockerfile
+++ b/server/dockerfile
@@ -4,6 +4,9 @@
 FROM node:20-alpine AS deps
 WORKDIR /app/server
 
+# better-sqlite3 requires build tools for native module compilation
+RUN apk add --no-cache python3 make g++
+
 # Install only server deps
 COPY server/package*.json ./
 RUN npm ci
