--- a/server/package.json
+++ b/server/package.json
@@ -18,16 +18,22 @@
   "dependencies": {
     "axios": "^1.11.0",
     "axios-retry": "^4.5.0",
+    "better-sqlite3": "^12.5.0",
     "bottleneck": "^2.19.5",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
+    "stream-json": "^1.9.1"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/multer": "^2.0.0",
+    "@types/node-cron": "^3.0.11",
+    "@types/stream-json": "^1.7.8",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/parser": "^8.47.0",
     "@vitest/coverage-v8": "^4.0.9",
