--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ client/test-results/
 client/tests/e2e/pdf-export.spec.ts-snapshots/
 server/src/*.db*
 node_modules
+
+# Electron
+dist-app/
+electron/dist/
