--- a/client/package.json
+++ b/client/package.json
@@ -21,55 +21,57 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@pixi/react": "^8.0.5",
     "@react-spring/web": "^10.0.3",
-    "@tailwindcss/vite": "^4.1.12",
-    "@tanstack/react-virtual": "^3.13.12",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-virtual": "^3.13.13",
     "@testing-library/jest-dom": "^6.9.1",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@use-gesture/react": "^10.3.1",
     "axios": "^1.11.0",
     "dexie": "^4.0.4",
-    "dexie-react-hooks": "^1.1.7",
-    "express": "^5.1.0",
+    "dexie-react-hooks": "^4.2.0",
+    "express": "^5.2.1",
     "file-saver": "^2.0.5",
-    "flowbite-react": "^0.12.7",
+    "flowbite-react": "^0.12.15",
     "jszip": "^3.10.1",
-    "lucide-react": "^0.541.0",
+    "lucide-react": "^0.562.0",
     "node-fetch": "^3.3.2",
     "pdf-lib": "^1.17.1",
     "pixi.js": "^8.14.3",
-    "react": "^19.1.0",
+    "react": "^19.2.3",
     "react-colorful": "^5.6.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.3",
     "react-draggable": "^4.5.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "swiper": "^12.0.3",
     "vite-plugin-node-polyfills": "^0.24.0",
-    "vitest": "^4.0.9",
-    "zod": "^4.1.12",
-    "zustand": "^5.0.8"
+    "vitest": "^4.0.16",
+    "zod": "^4.2.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
+    "@eslint/js": "^9.39.2",
     "@hello-pangea/dnd": "^18.0.1",
-    "@playwright/test": "^1.56.1",
-    "@tailwindcss/postcss": "^4.1.12",
-    "@testing-library/react": "^16.3.0",
+    "@playwright/test": "^1.57.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@testing-library/react": "^16.3.1",
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^24.2.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "@vitest/coverage-v8": "^4.0.9",
-    "eslint": "^9.30.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
+    "@types/node": "^25.0.3",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/coverage-v8": "^4.0.16",
+    "eslint": "^9.39.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.26",
     "fake-indexeddb": "^6.2.5",
     "globals": "^16.3.0",
-    "jsdom": "^27.2.0",
+    "jsdom": "^27.4.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.12",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.50.1",
+    "vite": "^7.3.0",
     "vite-plugin-pwa": "^1.2.0"
   }
 }
