--- a/server/package.json
+++ b/server/package.json
@@ -22,26 +22,26 @@
     "bottleneck": "^2.19.5",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "multer": "^1.4.5-lts.1",
+    "express": "^5.2.1",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "stream-json": "^1.9.1"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.5",
+    "@types/express": "^5.0.6",
     "@types/multer": "^2.0.0",
     "@types/node-cron": "^3.0.11",
     "@types/stream-json": "^1.7.8",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/parser": "^8.47.0",
-    "@vitest/coverage-v8": "^4.0.9",
-    "eslint": "^9.39.1",
+    "@typescript-eslint/parser": "^8.50.1",
+    "@vitest/coverage-v8": "^4.0.16",
+    "eslint": "^9.39.2",
     "nodemon": "^3.1.11",
     "supertest": "^7.0.0",
-    "tsx": "^4.20.6",
-    "typescript-eslint": "^8.47.0",
-    "vitest": "^4.0.9"
+    "tsx": "^4.21.0",
+    "typescript-eslint": "^8.50.1",
+    "vitest": "^4.0.16"
   }
 }
