feat: fully automate release process

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -12,7 +12,8 @@
         "resolveJsonModule": true
     },
     "include": [
-        "main.ts"
+        "main.ts",
+        "preload.cts"
     ],
     "exclude": [
         "node_modules",
