--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,2 +1,30 @@
 # Removed Netlify proxy - now using direct connection via api.proxxied.com
 # This significantly reduces bandwidth costs by avoiding double proxying
+
+# Cache hashed assets immutably (forever) - Vite adds content hashes to filenames
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# Service worker must always revalidate to ensure PWA updates reach users
+[[headers]]
+  for = "/sw.js"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/workbox-*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+# Cache logos and static images
+[[headers]]
+  for = "/*.png"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.svg"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
