--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "vitest run --silent",
     "test:ui": "vitest --ui --coverage.enabled=true",
     "dev": "NODE_ENV=development nodemon --exec tsx src/index.ts",
-    "build": "tsc -p tsconfig.build.json && cp -r cardbacks dist/server/cardbacks",
+    "build": "mkdir -p cardbacks && tsc -p tsconfig.build.json && cp -r cardbacks dist/server/cardbacks",
     "start": "node dist/server/src/index.js",
     "lint": "eslint ."
   },
