feat: add SEO improvements for better Google indexing
- Add meta description, keywords, Open Graph and Twitter card tags
- Add robots.txt and sitemap.xml
- Add static pre-rendering with react-static-prerender for SSG
- Configure Netlify to build and deploy pre-rendered pages

--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,3 +1,8 @@
+# Build settings
+[build]
+  command = "npm run build:prerender"
+  publish = "static-pages"
+
 # Removed Netlify proxy - now using direct connection via api.proxxied.com
 # This significantly reduces bandwidth costs by avoiding double proxying
 
