--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prerender": "react-static-prerender --with-build",
     "lint": "eslint .",
     "test": "vitest run --silent",
     "test:ui": "vitest --ui --coverage.enabled=true",
@@ -68,6 +69,7 @@
     "globals": "^16.3.0",
     "jsdom": "^27.4.0",
     "postcss": "^8.5.6",
+    "react-static-prerender": "^1.3.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.51.0",
