fix: clean up static page prerender to remove localhost

--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:prerender": "react-static-prerender --with-build",
+    "build:prerender": "react-static-prerender --with-build && sed -i 's|http://localhost:[0-9]\\+/|./|g' static-pages/index.html",
     "lint": "eslint .",
     "test": "vitest run --silent",
     "test:ui": "vitest --ui --coverage.enabled=true",
