--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "vitest run --silent",
     "test:ui": "vitest --ui --coverage.enabled=true",
     "dev": "NODE_ENV=development nodemon --exec tsx src/index.ts",
-    "build": "rm -rf dist && mkdir -p cardbacks && tsc -p tsconfig.build.json && cp -r cardbacks dist/server/",
+    "build": "rimraf dist && tsc -p tsconfig.build.json && cpx \"cardbacks/**/*\" dist/server/cardbacks",
     "start": "node dist/server/src/index.js",
     "lint": "eslint ."
   },
@@ -40,8 +40,10 @@
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/parser": "^8.51.0",
     "@vitest/coverage-v8": "^4.0.16",
+    "cpx2": "^8.0.0",
     "eslint": "^9.39.2",
     "nodemon": "^3.1.11",
+    "rimraf": "^6.1.2",
     "supertest": "^7.0.0",
     "tsx": "^4.21.0",
     "typescript-eslint": "^8.51.0",
