--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "release:minor": "node scripts/release.mjs --minor",
     "release:major": "node scripts/release.mjs --major",
     "release:promote": "node scripts/release.mjs --promote-stable",
-    "release:revert": "node scripts/release.mjs --revert"
+    "release:revert": "node scripts/release.mjs --revert",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.28.5",
